--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
-    "styled-components": "^4.2.1"
+    "styled-components": "^4.2.1",
+    "polished": "^3.4.0",
+    "styled-components-modifiers": "^1.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
