--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-scripts": "3.0.1",
     "styled-components": "^4.2.1",
     "polished": "^3.4.0",
-    "styled-components-modifiers": "^1.2.1"
+    "styled-components-modifiers": "^1.2.1",
+    "babel-plugin-styled-components": "^1.10.0"
   },
   "scripts": {
     "start": "react-scripts start",
